Fix overflowing Tutorial search

--- a/themes/mongodb-tutorials/src/styles/bem-components/tutorial-search.scss
+++ b/themes/mongodb-tutorials/src/styles/bem-components/tutorial-search.scss
@@ -8,8 +8,11 @@
   border: 1px solid $grey-primary;
   border-radius: 3px;
   font-size: 20px;
-  margin: 40px 40px 10px;
   outline: none;
   padding: 20px 20px 20px 50px;
   width: 100%;
+
+  &__wrapper {
+    margin: 40px 40px 10px;
+  }
 }
